# llm-mcp

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  deploy-cloudrun.sh  docker-compose.yml  dune-project  dune-workspace  llm_mcp.opam  start-llm-mcp.sh  start-server.sh  start.sh
.github/workflows/: deploy-cloudrun.yml  release.yml  test.yml
benchmark/: benchmark_compact.ml  dune
clients/python/: compact_decoder.py  example_usage.py  requirements.txt  test_compact_decoder.py
clients/typescript/: compact-decoder.test.ts  compact-decoder.ts  example-usage.ts  package-lock.json  package.json
data/: adversarial_results.json  all_pivots_results.json  baseline_benchmark_results.json  compression_dashboard.json  cross_model_validation.json  e2e_workload_analysis.json  models  real_masc_analysis.json  realworld_unbiased_results.json
data/chains/: README.md  cascade-default.json  code-migration.json  deep-research.json  figma-to-component-spec.json  figma-to-prototype.json  figma-to-web-component.json  figma-visual-regression.json  incident-response.json  magi-code-review-inline.json  magi-code-review.json  mermaid-to-chain.json  pr-review-pipeline.json  rw-accessibility-a11y-audit.json  rw-accessibility-content-ops.json  rw-accessibility-design-to-code-verify.json  rw-accessibility-experiment-variant.json  rw-accessibility-incident-ui-regression.json  rw-accessibility-localization-pack.json  rw-accessibility-perf-budget.json  rw-accessibility-release-readiness.json  rw-accessibility-spec-to-tasks.json  rw-accessibility-token-audit.json  rw-admin-a11y-audit.json  rw-admin-content-ops.json  rw-admin-design-to-code-verify.json  rw-admin-experiment-variant.json  rw-admin-incident-ui-regression.json  rw-admin-localization-pack.json  rw-admin-perf-budget.json  rw-admin-release-readiness.json  rw-admin-spec-to-tasks.json  rw-admin-token-audit.json  rw-analytics-a11y-audit.json  rw-analytics-content-ops.json  rw-analytics-design-to-code-verify.json  rw-analytics-experiment-variant.json  rw-analytics-incident-ui-regression.json  rw-analytics-localization-pack.json  (+180 more)
data/dicts/: mixed.zdict  (+1 more)
docs/: CHAIN-N8N-INTEGRATION.md  CHAIN-SPEC.md  CHAIN_DSL.md  CHAIN_INTEROP_GUARANTEE.md  CHAIN_RFC.md  COMPACT-PROTOCOL-V4.md  EVALUATION_PATTERNS.md  FAIR-NODE-PROPOSAL.md  FORMAL-VERIFICATION.md  IMPROVEMENT_PLAN.md  INSTALL-CHECKLIST.md  KIDSNOTE-MCP-N8N-INTEGRATION.md  LOCAL_DEV_BEST_PRACTICE.md  MCP-TEMPLATE.md  MULTI_TENANCY_REFACTOR.md  OBSERVABILITY.md  PRESETS.md  PROTOCOL.md  RESEARCH-NOTES.md  SETUP.md  STREAMING.md  USE_CASES.md  VISION_FIRST_FIGMA_WORKFLOW.md  ZAI-MODEL-INVENTORY.md  ZAI-SETUP.md  chain-node-types-reference.html  chainref-patterns-reference.html  mermaid_test.md
lib/: agent_loop.ml  agent_loop_eio.ml  chain_adapter_eio.ml  chain_batch.ml  chain_compiler.ml  chain_composer.ml  chain_context.ml  chain_evaluator.ml  chain_exec_context_eio.ml  chain_exec_inputs_eio.ml  chain_executor_eio.ml  chain_executor_retry.ml  chain_mermaid_parser.ml  chain_node_runner.ml  chain_orchestrator_eio.ml  chain_parser.ml  chain_parser.mli  chain_registry.ml  chain_retry.ml  chain_run_store.ml  chain_stats.ml  chain_telemetry.ml  chain_trace_types.ml  chain_trace_types.mli  chain_types.ml  chain_types.mli  chain_utils.ml  chain_utils.mli  chain_view_page.ml  checkpoint_store.ml  checkpoint_store.mli  cli_runner.ml  cli_runner_eio.ml  common.ml  compact_impl.ml  dictionary.ml  difficulty_classifier.ml  difficulty_classifier.mli  difficulty_classifier_llm.ml  difficulty_classifier_llm.mli  (+72 more)
lib/agent_core/: BENCHMARKS.md  README.md  agent_core.ml  agent_loop_functor.ml  agent_sigs.ml  agent_types.ml  claude_cli_backend.ml  default_state.ml  dune  ollama_backend.ml  openai_backend.ml  orchestrator.ml  retry.ml  timeout.ml
lib/agent_core_bridge/: dune  lwt_bridge.ml
lib/agent_core_eio/: README.md  agent_core_eio.ml  agent_loop_eio.ml  agent_sigs_eio.ml  agent_types.ml  claude_cli_backend_eio.ml  dune  ollama_backend_eio.ml  openai_backend_eio.ml  retry_eio.ml  spec_dsl.ml  timeout_eio.ml  validation_stack.ml  validator_eio.ml  validator_presets.ml
paper/: Makefile  OSDI-2026-draft.md  OSDI-2026-sections-1-3.md  REPOSITIONED-SCOPE.md  compact-protocol-paper-structure.md  cross-model-theory.md  empirical-results-summary.md  fundamental-improvements.md  main.tex  peer-review-simulation.md
scripts/: adversarial_robustness_test.py  all_pivots_experiment.py  analyze_real_masc_data.py  benchmark-compact.sh  benchmark.sh  bump-version.sh  chain-heartbeat.example.json  chain-heartbeat.py  claude-wrapper.sh  collect_samples.py  comprehensive_baseline_benchmark.py  cross_format_small_test.py  cross_model_validation.py  e2e_workload_analysis.py  glm-smoke-matrix.sh  mcp-smoke.sh  multi_format_dict_test.py  real_system_compression.py  realworld_unbiased_benchmark.py  run_distributed_test.sh  small_message_compression.py
test/: cycle_test.sh  debug_action_node.ml  dune  test_adapter_transforms.ml  test_agent_core.ml  test_agent_core_eio.ml  test_agent_core_stress.ml  test_agent_soak_1hour.ml  test_agent_soak_1min.ml  test_agent_types_coverage.ml  test_all_node_types.ml  test_binaries.ml  test_cascade.ml  test_chain_a2a_e2e.ml  test_chain_adapter_wave8.ml  test_chain_batch.ml  test_chain_category.ml  test_chain_compiler.ml  test_chain_conversation.ml  test_chain_coverage.ml  test_chain_distributed.ml  test_chain_engine.ml  test_chain_engine_eio.ml  test_chain_evaluator.ml  test_chain_evaluator_coverage.ml  test_chain_evaluator_coverage2.ml  test_chain_evaluator_wave7.ml  test_chain_executor_coverage.ml  test_chain_executor_helpers.ml  test_chain_executor_retry.ml  test_chain_formal.ml  test_chain_mcp_eio.ml  test_chain_mermaid_parser.ml  test_chain_modules_coverage.ml  test_chain_orchestrator_eio.ml  test_chain_parser_coverage.ml  test_chain_parser_safety.ml  test_chain_qcheck.ml  test_chain_registry.ml  test_chain_retry.ml  (+104 more)
test_realworld/: dune  goaldriven_realworld.ml
tests/: chain_patterns_test.sh  chain_practical_tests.sh  chain_simple_test.sh
(+75 files in other folders)
