(library
 (name llm_mcp)
 (public_name llm_mcp)
 (flags (:standard -w -69))
 (libraries
   ; Lwt (for existing mcp_server.ml, mcp_client.ml, tools.ml)
   lwt
   lwt.unix
   cohttp-lwt-unix
   domainslib
   ; Eio (for new http_server_eio.ml, mcp_server_eio.ml)
   eio
   eio_main
   httpun
   httpun-eio
   gluten
   gluten-eio
   cohttp-eio
   lwt_eio
   ipaddr
   ; Common
   yojson
   str
   unix
   mcp_protocol
   msgpck
   grpc-direct-core
   zstd
   compact-protocol)
 (ocamlopt_flags (:standard -O3))
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))
