; =============================================================================
; llm_mcp_common - Shared modules (NO Lwt, NO Eio runtime!)
; =============================================================================
(library
 (name llm_mcp_common)
 (public_name llm_mcp.common)
 (wrapped false)
 (flags (:standard -w -69))
 (modules
   ; Pure OCaml - shared between Eio and Lwt
   common
   types
   dictionary
   ollama_parser
   tool_config
   tool_parsers
   ; Chain Engine (Phase 3-4)
   chain_types
   chain_evaluator
   chain_composer
   chain_parser
   chain_mermaid_parser
   chain_compiler
   chain_registry
   ; Chain Engine (Phase 5 - Category Theory)
   chain_category
   chain_batch
   chain_stats
   chain_telemetry)
 (libraries
   yojson
   str
   unix
   zstd
   msgpck
   compact-protocol
   grpc-direct-core
   mcp_protocol)
 (ocamlopt_flags (:standard -O3))
(preprocess (pps ppx_deriving_yojson)))

; =============================================================================
; llm_mcp_resilience - Shared resilience helpers
; =============================================================================
(library
 (name llm_mcp_resilience)
 (public_name llm_mcp.resilience)
 (wrapped false)
 (modules mcp_resilience)
 (libraries eio unix))

; =============================================================================
; llm_mcp_eio - Pure Eio Library (NO Lwt!)
; =============================================================================
(library
 (name llm_mcp_eio)
 (public_name llm_mcp.eio)
 (wrapped false)
 (flags (:standard -w -69))
 (modules
   ; Core Eio modules
   http_server_eio
   mcp_server_eio
   tools_eio
   mcp_client_eio
   cli_runner_eio
   ; Chain Engine (Phase 3-4)
   chain_executor_eio
   chain_orchestrator_eio)
 (libraries
   ; Shared modules
   llm_mcp.common
   ; Pure Eio - NO LWT!
   eio
   eio_main
   httpun
   httpun-eio
   gluten
   gluten-eio
   cohttp-eio
   ipaddr
   ; Common
   yojson
   str
   unix
   mcp_protocol
   msgpck
   grpc-direct-core
   zstd
   compact-protocol
   llm_mcp_resilience)
 (ocamlopt_flags (:standard -O3))
 (preprocess (pps ppx_deriving_yojson)))

; =============================================================================
; llm_mcp - Legacy Lwt Library (for backwards compatibility)
; =============================================================================
(library
 (name llm_mcp)
 (public_name llm_mcp)
 (flags (:standard -w -69))
 (modules
   ; Lwt-based modules
   mcp_server
   tools
   mcp_client
   agent_loop
   cli_runner
   parallel_utils
   run_log
   mcp_session
   notification_sse
   sse
   llm_mcp)
 (libraries
   ; Shared modules
   llm_mcp.common
   ; Lwt
   lwt
   lwt.unix
   cohttp-lwt-unix
   domainslib
   lwt_eio
   ; Common
   yojson
   str
   unix
   mcp_protocol
   msgpck
   grpc-direct-core
   zstd
   compact-protocol
   llm_mcp_resilience)
 (ocamlopt_flags (:standard -O3))
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))
