; Core tests (no agent_core dependency)
(tests
 (names test_types test_tools test_mcp_server test_binaries test_msgpack_size test_protocol_invariants test_input_compression test_dictionary test_parallel test_cli_runner test_common test_mcp_session test_sse test_notification_sse test_run_log)
 (modules (:standard \ test_ollama_integration test_agent_core_eio test_validator_eio test_lwt_bridge test_presets test_spec_dsl test_validation_stack test_orchestration_eio test_cli_runner_eio test_tools_eio test_mcp_server_eio test_tool_parsers))
 (libraries llm_mcp alcotest alcotest-lwt lwt lwt.unix str zstd domainslib)
 (preprocess (pps lwt_ppx)))

; Ollama integration test (requires OLLAMA_TEST=1)
(executable
 (name test_ollama_integration)
 (modules test_ollama_integration)
 (libraries llm_mcp.agent_core_eio alcotest eio eio_main str))

; Eio-based tests
(test
 (name test_agent_core_eio)
 (libraries llm_mcp.agent_core_eio alcotest eio eio_main))

; Validator Eio tests
(test
 (name test_validator_eio)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; Lwt/Eio bridge tests
(test
 (name test_lwt_bridge)
 (libraries agent_core_bridge alcotest eio eio_main lwt lwt.unix lwt_eio str))

; Validator Presets tests
(test
 (name test_presets)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; Spec DSL tests
(test
 (name test_spec_dsl)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; Validation Stack tests
(test
 (name test_validation_stack)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; Orchestration integration tests
(test
 (name test_orchestration_eio)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; CLI Runner Eio tests
(test
 (name test_cli_runner_eio)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main))

; Tools Eio tests
(test
 (name test_tools_eio)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main))

; MCP Server Eio tests
(test
 (name test_mcp_server_eio)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main))

; Chain Engine Eio tests
(test
 (name test_chain_engine_eio)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main))

; Chain MCP integration tests
(test
 (name test_chain_mcp_eio)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main))

; Tool_parsers pure function tests (NO Lwt, NO Eio)
(test
 (name test_tool_parsers)
 (libraries llm_mcp.common alcotest))

; Chain Engine tests (types, parser, compiler, registry, conversation context)
(test
 (name test_chain_engine)
 (libraries llm_mcp.common llm_mcp.eio alcotest eio eio_main str))

; Mermaid Parser tests (executable documentation)
(test
 (name test_mermaid_parser)
 (libraries llm_mcp.common alcotest))

; Chain Composer tests (Neural Layer)
(test
 (name test_composer)
 (libraries llm_mcp.common alcotest str unix))

; Chain Orchestrator E2E tests (Integration Layer)
(test
 (name test_chain_orchestrator_eio)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main unix))

; MZ Chain 10-step test
(executable
 (name test_mz_chain)
 (modules test_mz_chain)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main))
(executable (name test_roundtrip_demo) (libraries llm_mcp.common))

(executable
 (name test_resilience_mermaid)
 (libraries llm_mcp))

; Lossless Roundtrip tests (JSON ↔ Mermaid with metadata)
(test
 (name test_lossless_roundtrip)
 (libraries llm_mcp.common alcotest))

; GoalDriven E2E integration tests (requires Ollama)
(executable
 (name test_goaldriven_e2e)
 (modules test_goaldriven_e2e)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix))

; GoalDriven Complex real-world tests (requires Ollama)
(executable
 (name test_goaldriven_complex)
 (modules test_goaldriven_complex)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix))

; Debug action_node linking
(executable
 (name debug_action_node)
 (modules debug_action_node)
 (libraries llm_mcp.common))

; GoalDriven Tool Use tests (requires Ollama + llama3.2)
(executable
 (name test_goaldriven_tools)
 (modules test_goaldriven_tools)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix yojson))
