; Pure tests - NO Lwt, NO Eio runtime (uses llm_mcp.common only)
(tests
 (names test_types test_dictionary test_common test_mcp_session test_sse test_notification_sse test_safe_parse test_chain_mermaid_parser test_tools_tracer)
 (modules test_types test_dictionary test_common test_mcp_session test_sse test_notification_sse test_safe_parse test_chain_mermaid_parser test_tools_tracer)
 (libraries llm_mcp.common alcotest str zstd))

; Model Registry tests (category resolution, passthrough)
(test
 (name test_model_registry)
 (libraries llm_mcp.common alcotest))

; Difficulty Classifier tests (heuristic query classification)
(test
 (name test_difficulty_classifier)
 (libraries llm_mcp.common alcotest eio_main))

; Ollama integration test (requires OLLAMA_TEST=1)
(executable
 (name test_ollama_integration)
 (modules test_ollama_integration)
 (libraries llm_mcp.agent_core_eio alcotest eio eio_main str))

; Eio-based tests
(test
 (name test_agent_core_eio)
 (libraries llm_mcp.agent_core_eio alcotest eio eio_main))

; Validator Eio tests
(test
 (name test_validator_eio)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; Validator Presets tests
(test
 (name test_presets)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; Spec DSL tests
(test
 (name test_spec_dsl)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; Validation Stack tests
(test
 (name test_validation_stack)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; Orchestration integration tests
(test
 (name test_orchestration_eio)
 (libraries llm_mcp.agent_core_eio eio eio_main))

; CLI Runner Eio tests
(test
 (name test_cli_runner_eio)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main))

; Tools Eio tests
(test
 (name test_tools_eio)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main))

; MCP Server Eio tests
(test
 (name test_mcp_server_eio)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main))

; Chain Engine Eio tests
(test
 (name test_chain_engine_eio)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main))

; Chain MCP integration tests
(test
 (name test_chain_mcp_eio)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main))

; Chain LLM system prompt passthrough (pure mapping, no network)
(test
 (name test_chain_system_prompt)
 (libraries llm_mcp.eio llm_mcp.common alcotest))

; Tool_parsers pure function tests (NO Lwt, NO Eio)
(test
 (name test_tool_parsers)
 (libraries llm_mcp.common alcotest))

; Gemini model listing parsing tests (no network)
(test
 (name test_gemini_list)
 (libraries llm_mcp.eio llm_mcp.common alcotest))

; Chain Engine tests (types, parser, compiler, registry, conversation context)
(test
 (name test_chain_engine)
 (libraries llm_mcp.common llm_mcp.eio alcotest eio eio_main str))

; Chain Coverage tests (empty_response, checkpoint, adapter, ucb1)
(test
 (name test_chain_coverage)
 (libraries llm_mcp.common llm_mcp.eio alcotest str unix))

; Chain Executor Coverage tests (execute_* functions comprehensive coverage)
(test
 (name test_chain_executor_coverage)
 (libraries llm_mcp.common llm_mcp.eio alcotest str unix eio eio_main))

; Chain Parser Safety tests (error handling, placeholder validation)
(test
 (name test_chain_parser_safety)
 (libraries llm_mcp.common))

; Mermaid Parser tests (executable documentation)
(test
 (name test_mermaid_parser)
 (libraries llm_mcp.common alcotest))

; Mermaid Parser Coverage tests (comprehensive node/edge/roundtrip tests)
(test
 (name test_mermaid_coverage)
 (libraries llm_mcp.common alcotest str))

; Adapter Transform tests (Conditional, JsonPath, etc.)
; Uses llm_mcp.eio for Chain_adapter_eio.apply_adapter_transform
(test
 (name test_adapter_transforms)
 (libraries llm_mcp.common llm_mcp.eio alcotest str))

; Chain Composer tests (Neural Layer)
(test
 (name test_composer)
 (libraries llm_mcp.common alcotest str unix))

; Chain Orchestrator E2E tests (Integration Layer)
(test
 (name test_chain_orchestrator_eio)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main unix))

; MZ Chain 10-step test
(executable
 (name test_mz_chain)
 (modules test_mz_chain)
 (libraries llm_mcp.eio llm_mcp.common eio eio_main))
(executable (name test_roundtrip_demo) (libraries llm_mcp.common))

(executable
 (name test_resilience_mermaid)
 (libraries llm_mcp.eio))

; Lossless Roundtrip tests (JSON ↔ Mermaid with metadata)
(test
 (name test_lossless_roundtrip)
 (libraries llm_mcp.common alcotest))

; Generated chain roundtrip tests (random small graphs)
(test
 (name test_generated_roundtrip)
 (libraries llm_mcp.common alcotest))

; Tool Node tests (Layer 1-4: JSON parsing, Mermaid gen/parse, roundtrip)
(test
 (name test_tool_node)
 (libraries llm_mcp.common alcotest))

; Real Chain Files tests (Layer 5: actual data/chains/*.json roundtrip)
(test
 (name test_real_chains)
 (libraries llm_mcp.common alcotest))

; GoalDriven E2E integration tests (requires Ollama)
(executable
 (name test_goaldriven_e2e)
 (modules test_goaldriven_e2e)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix))

; GoalDriven Complex real-world tests (requires Ollama)
(executable
 (name test_goaldriven_complex)
 (modules test_goaldriven_complex)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix))

; Debug action_node linking
(executable
 (name debug_action_node)
 (modules debug_action_node)
 (libraries llm_mcp.common))

; GoalDriven Tool Use tests (requires Ollama + llama3.2)
(executable
 (name test_goaldriven_tools)
 (modules test_goaldriven_tools)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix yojson))

; GoalDriven Coverage tests (Mock LLM - no Ollama needed)
(test
 (name test_goaldriven_coverage)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix))

; GoalDriven Claude API tests (requires ANTHROPIC_API_KEY)
(executable
 (name test_goaldriven_claude)
 (modules test_goaldriven_claude)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix yojson))

; GoalDriven Gemini API tests (requires Gemini CLI)
(executable
 (name test_goaldriven_gemini)
 (modules test_goaldriven_gemini)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main str unix yojson))

; QCheck Property-Based Tests for Chain Roundtrip
(test
 (name test_chain_qcheck)
 (libraries llm_mcp.common alcotest qcheck qcheck-alcotest))

; Formal Verification: Exhaustive + Property-Based Proof
(executable
 (name test_chain_formal)
 (modules test_chain_formal)
 (libraries llm_mcp.common qcheck))

; MCP Resilience tests (Circuit Breaker, Retry, Timeout)
; Phase 4.2 of MCP Unify project
(test
 (name test_mcp_resilience)
 (libraries llm_mcp.eio alcotest eio eio_main))

; Chain Compiler and Evaluator Coverage tests
; Targets: compile, build_dependency_graph, topological_sort, calculate_depth,
;          metrics collection, scoring heuristics (anti_fake, json_schema, regex_match)
(test
 (name test_compiler_evaluator_coverage)
 (libraries llm_mcp.common llm_mcp.eio alcotest str unix))

; Chain Parser Coverage tests (all 22+ node types, validation, serialization)
; Targets: parse_chain, parse_node, parse_node_type, parse_config,
;          validate_chain, validate_chain_strict, chain_to_json, node_to_json,
;          parse_merge_strategy, parse_threshold_op, parse_select_strategy,
;          parse_backoff_strategy, parse_adapter_transform,
;          extract_input_mappings, extract_json_mappings
(test
 (name test_chain_parser_coverage)
 (libraries llm_mcp.common alcotest))

; Chain Modules Coverage tests (Types, Adapter, Category, Composer, Orchestrator, Batch)
; Comprehensive tests for chain engine modules
(test
 (name test_chain_modules_coverage)
 (libraries llm_mcp.common llm_mcp.eio alcotest str unix eio eio_main))

(executable
 (name test_all_node_types)
 (libraries llm_mcp.common))

(executable
 (name test_edge_cases)
 (libraries llm_mcp.common))

(executable
 (name test_threshold_debug)
 (libraries llm_mcp.common))

; Fewshot Judge tests (pure function tests)
(test
 (name test_fewshot_judge)
 (libraries llm_mcp.common alcotest))

; Fewshot Injector tests (pure function tests)
(test
 (name test_fewshot_injector)
 (libraries llm_mcp.common alcotest))

; Checkpoint Store tests (JSON roundtrip, pure functions)
(test
 (name test_checkpoint_store)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main))

; Chain Compiler tests (topological sort, dependency analysis)
(test
 (name test_chain_compiler)
 (libraries llm_mcp.common alcotest))

; Chain Category tests (category theory abstractions, monoids, profunctors)
(test
 (name test_chain_category)
 (libraries llm_mcp.common alcotest))

; Chain Evaluator tests (metrics, triggers, verification parsing)
(test
 (name test_chain_evaluator)
 (libraries llm_mcp.common alcotest str unix))

; Chain Stats tests (percentiles, costs, formatting)
(test
 (name test_chain_stats)
 (libraries llm_mcp.common alcotest eio eio_main))

; Chain Telemetry tests (event type serialization)
(test
 (name test_chain_telemetry)
 (libraries llm_mcp.common alcotest))

; Chain Run Store tests (truncation, collection, JSON serialization)
(test
 (name test_chain_run_store)
 (libraries llm_mcp.eio llm_mcp.common alcotest))

; Prompt Registry tests (variable extraction, rendering, JSON)
(test
 (name test_prompt_registry)
 (libraries llm_mcp.eio llm_mcp.common alcotest str unix))

; Langfuse Integration tests (ID generation, JSON serialization, timestamps)
(test
 (name test_langfuse)
 (libraries llm_mcp.common alcotest))


; Error module tests (types, is_recoverable, to_string, severity, JSON roundtrip)
(test
 (name test_error)
 (libraries llm_mcp.common alcotest))

; Metrics module tests (Prometheus-compatible metrics collection)
(test
 (name test_metrics)
 (libraries llm_mcp.common alcotest unix))

; Rate limit module tests (Token bucket algorithm, headers)
(test
 (name test_rate_limit)
 (libraries llm_mcp.common llm_mcp.eio alcotest unix eio eio_main))

; Ollama parser tests (streaming chunks, tool calls, chat responses)
(test
 (name test_ollama_parser)
 (libraries llm_mcp.common alcotest))

; Telemetry JSONL tests (expand_tilde, ensure_dir, logging)
(test
 (name test_telemetry_jsonl)
 (libraries llm_mcp.common alcotest unix))

; Log module tests (level conversion, timestamp, config)
(test
 (name test_log)
 (libraries llm_mcp.common alcotest unix))

; Tool_config tests (budget mode, MCP config parsing)
(test
 (name test_tool_config)
 (libraries llm_mcp.common alcotest))

; Version constant tests
(test
 (name test_version)
 (libraries llm_mcp.common alcotest))

; Chain_registry tests (storage, lookup, versioning)
(test
 (name test_chain_registry)
 (libraries llm_mcp.common alcotest unix))

; Chain_batch tests (delay calculation, token estimation, chunking)
(test
 (name test_chain_batch)
 (libraries llm_mcp.common llm_mcp.eio alcotest eio eio_main))

; Chain_types tests (direction, defaults, node_type_name, make_* helpers)
(test
 (name test_chain_types)
 (libraries llm_mcp.common alcotest))

; Retry module tests (exponential backoff, error detection, rate limiting)
(test
 (name test_retry)
 (libraries llm_mcp.resilience alcotest str))

; Chain Retry tests (OpenClaw-inspired retry with recovery)
(test
 (name test_chain_retry)
 (libraries llm_mcp.resilience llm_mcp.common alcotest eio eio_main))

; Error Recovery Integration tests
(test
 (name test_error_recovery)
 (libraries llm_mcp.resilience llm_mcp.common alcotest eio eio_main))

; Chain Executor Retry tests (circuit breaker, batch retry)
(test
 (name test_chain_executor_retry)
 (libraries llm_mcp.resilience llm_mcp.common alcotest eio eio_main unix))

; Orchestrator Retry E2E tests (actual integration verification)
(test
 (name test_orchestrator_retry_e2e)
 (libraries llm_mcp.resilience llm_mcp.common alcotest eio eio_main unix))

; Retry Edge Cases
(test
 (name test_retry_edge_cases)
 (libraries llm_mcp.resilience llm_mcp.common alcotest eio eio_main unix))

; Cascade Node tests (confidence parsing, tier routing, Mermaid DSL, stats)
(test
 (name test_cascade)
 (libraries llm_mcp.common alcotest eio eio_main str))

; Wave 2 Coverage Tests

; Types_glm coverage (GLM function calling, tool types, translation strategies)
(test
 (name test_types_glm_coverage)
 (libraries llm_mcp.common alcotest))

; Tools_ollama_agentic coverage (message builders, request/response parsing)
(test
 (name test_tools_ollama_agentic_coverage)
 (libraries llm_mcp.common alcotest))

; Agent_types coverage (role, message_to_json, token estimation)
(test
 (name test_agent_types_coverage)
 (libraries llm_mcp.agent_core_eio alcotest eio eio_main))

; Chain_evaluator additional coverage (metrics, triggers, verification, reports)
(test
 (name test_chain_evaluator_coverage)
 (libraries llm_mcp.common alcotest str unix))

; Chain_types additional coverage (consensus, confidence, parallel groups, batch)
(test
 (name test_chain_types_coverage)
 (libraries llm_mcp.common alcotest))

; Types_core coverage (response_format, tool_result, enum roundtrips)
(test
 (name test_types_core_coverage)
 (libraries llm_mcp.common alcotest))

; Dictionary additional coverage (model_type, detect_model, save/load, pp)
(test
 (name test_dictionary_coverage)
 (libraries llm_mcp.common alcotest str unix))

; Mermaid Parser Coverage tests (helpers, all node types, metadata, edges, multiline)
(test
 (name test_mermaid_parser_coverage)
 (libraries llm_mcp.common alcotest str))

; Time_compat tests (Eio clock + Unix fallback)
(test
 (name test_time_compat)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main unix))

; Handler_utils tests (gh_pr_diff, slack_post — Eio-based tool handlers)
(test
 (name test_handler_utils)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main unix))

; Handler_codex tests (OpenAI API handler — response parsing, error paths)
(test
 (name test_handler_codex)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main unix))

; Binary integration tests (subprocess calls to CLI binaries)
(test
 (name test_binaries)
 (libraries alcotest str unix))

; Parse chain files tests (JSON → chain parsing)
(executable
 (name test_parse_chains)
 (libraries llm_mcp.common yojson))

; Chain_utils tests (safe list/string helpers, empty response, prompt analysis)
(test
 (name test_chain_utils)
 (libraries llm_mcp.common alcotest str))

; Chain_conversation tests (token estimation, context management, summarization)
(test
 (name test_chain_conversation)
 (libraries llm_mcp.common alcotest))

; Handler_gemini extended coverage (parse_models_response edge cases)
(test
 (name test_handler_gemini_coverage)
 (libraries llm_mcp.eio llm_mcp.common alcotest))

; Chain Executor helpers tests (pure functions: confidence, context, plan_to_steps)
(test
 (name test_chain_executor_helpers)
 (libraries llm_mcp.common llm_mcp.eio alcotest str))

; MCP Server helpers tests (make_error, health_response, session store edges)
(test
 (name test_mcp_server_helpers)
 (libraries llm_mcp.eio llm_mcp.common alcotest eio eio_main unix))

; Tools_eio helpers tests (env_truthy, chain_llm_args branches, validate_chain)
(test
 (name test_tools_eio_helpers)
 (libraries llm_mcp.eio llm_mcp.common alcotest str unix))

; Spawn_registry tests (parse_int, latency, try_start/finish, JSON, Prometheus)
(test
 (name test_spawn_registry)
 (libraries llm_mcp.eio llm_mcp.common alcotest str eio eio_main))
